--- a/src/app/usuario/login/criar-conta/criar-conta.component.html
+++ b/src/app/usuario/login/criar-conta/criar-conta.component.html
@@ -33,6 +33,12 @@
                                 </div>
                             </div>
                             <div class="form-group row">
+                                <div class="col-sm-12 mb-3 mb-sm-0">
+                                    <input type="text" formControlName="cargo" class="form-control form-control-user"
+                                        id="exampleInputEmail" placeholder="Cargo" required>
+                                </div>
+                            </div>
+                            <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-0">
                                     <input type="password" formControlName="senha"
                                         class="form-control form-control-user" id="exampleInputPassword"
