--- a/src/app/cadastro/saida/saida.component.html
+++ b/src/app/cadastro/saida/saida.component.html
@@ -1,4 +1,82 @@
-<p>
-  Página em desenvolvimento
-</p>
-<a [routerLink]="['/home']">Retornar a página inicial</a>
+<ngx-spinner 
+bdColor="rgba(45,85,198,0.71)" 
+size="medium" 
+color="#ffffff" 
+type="square-loader" 
+[fullScreen]="true">
+  <p style="color: white"> Carregando... </p>
+</ngx-spinner>
+
+<div *ngIf="sucesso" class="alert alert-success text-success text-center">
+  Requisição enviada com sucesso!
+</div>
+
+<div *ngIf="erro && messageError != ''" class="alert alert-danger text-center text-danger">
+  Houve uma falha na requisição, consulte o log do servidor {{messageError}}
+</div>
+
+<div class="card shadow mb-5 rounded">
+  <div class="card-header">
+    <h6 class="card-title font-weight-bold text-primary text-uppercase mb-1">Preencha o formulário</h6>
+  </div>
+  <div class="card-body">
+    <form [formGroup]="saidaForm" (ngSubmit)="onSubmit()">
+      <h5><strong>Dados do Equipamento </strong> </h5>
+        <div class="row">
+          <div class="col-sm-2">
+            Filtro:
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3 py-2">
+            <input type="text" placeholder="Nome" class="form-control">
+          </div>
+          <div class="col-sm-3 py-2">
+            <select formControlName="departamento" name="departamento" id="departamento" class="form-control">
+              <option [value]="null" [disabled]="true">Departamento</option>
+              <option *ngFor="let i of params?.departamentos" [value]="i.idDepartamento">{{i.nomeDepartamento}}</option>
+            </select>
+          </div>
+          <div class="col-sm-3 py-2">
+            <select formControlName="fabricante" name="fabricante" id="fabricante" class="form-control">
+              <option [value]="null" [disabled]="true">Fabricante</option>
+              <option *ngFor="let i of params?.fabricantes" [value]="i.idFabricante" >{{i.nomeFabricante}}</option>
+            </select>
+          </div>
+          <div class="form-check col-sm-3 py-2">
+            <ng-multiselect-dropdown 
+            [placeholder]="'Selecione...'" 
+            [data]="dropdownListStatus"
+            formControlName="status" 
+            [settings]="dropdownStatus">
+          </ng-multiselect-dropdown>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12 py-2">
+            <button class="btn btn-secondary float-right">Buscar Equipamento</button>
+          </div>
+        </div>
+                   <hr />
+      <h5><strong>Usuário</strong> </h5>
+      <div class="row">
+        <div class="col-sm-3 py-2">
+          <input type="text" placeholder="Nome usuário" class="form-control">
+        </div>
+        <div class="col-sm-2 py-2">
+          <button class="btn btn-secondary " type="button">Localizar</button>
+        </div>
+      </div>
+                    <hr />
+      <h5><strong>Dados de Saída</strong> </h5>
+      <div class="row">
+        <div class="col-sm-6 py-2">
+          <textarea  class="form-control" placeholder="Observações" name="observacos" id="observacos" cols="30" rows="3"></textarea>
+        </div>
+      </div>
+      <hr />
+      <button type="submit" class="btn btn-primary float-right">Salvar</button>
+    </form>
+  </div>
+</div>
