--- a/src/app/consulta/equipamento-consulta/equipamento-consulta.component.html
+++ b/src/app/consulta/equipamento-consulta/equipamento-consulta.component.html
@@ -7,7 +7,6 @@ type = "square-loader"
 <p style="color: white"> Carregando... </p>
 </ngx-spinner>
 
-
 <div id="accordion">
   <div class="card shadow rounded mb-5">
     <div class="card-header" id="headingOne">
@@ -21,22 +20,22 @@ type = "square-loader"
       <div class="card-body">
         <form [formGroup]="buscarForm" (ngSubmit)="pesquisar()">
         <div class="row">
-          <div class="col-sm-3">
+          <div class="col-sm-3 py-2">
             <input formControlName="nome" type="text" class="form-control" placeholder="Nome">
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-3 py-2">
             <select formControlName="departamento" name="departamento" id="departamento" class="form-control">
               <option [value]="null" [disabled]="true">Departamento</option>
               <option *ngFor="let i of params?.departamentos" [value]="i.idDepartamento">{{i.nomeDepartamento}}</option>
             </select>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-3 py-2">
             <select formControlName="fabricante" name="fabricante" id="fabricante" class="form-control">
               <option [value]="null" [disabled]="true">Fabricante</option>
               <option *ngFor="let i of params?.fabricantes" [value]="i.idFabricante" >{{i.nomeFabricante}}</option>
             </select>
           </div>
-          <div class="form-check col-sm-3">
+          <div class=" col-sm-3 py-2">
             <ng-multiselect-dropdown 
             [placeholder]="'Selecione...'" 
             [data]="dropdownListStatus"
@@ -47,7 +46,7 @@ type = "square-loader"
         </div>
         <hr>
         <div class="row">
-          <div class="col-sm-12 ">
+          <div class="col-sm-12  py-2">
             <button class="btn btn-primary float-right" type="submit">Buscar</button>
           </div>
         </div>
